@@ -202,5 +202,21 @@ describe SimpleDeploy do
 
       stack.send(:instances).should == ['50.40.30.20']
     end
+
+    it 'should handle instanceSets with multiple intances' do
+      @instances = [{ 'instancesSet' => [
+        { 'ipAddress' => '50.40.30.20', 'privateIpAddress' => '10.1.2.3' },
+        { 'ipAddress' => '50.40.30.21', 'privateIpAddress' => '10.1.2.4' }] }]
+
+      stack = SimpleDeploy::Stack.new :environment => 'test-env',
+                                       :name        => 'test-stack',
+                                       :logger      => 'my-logger',
+                                       :config      => @config_stub,
+                                       :internal    => false
+      stack.stub(:stack) { @stack_mock }
+      @stack_mock.stub(:instances).and_return(@instances)
+
+      stack.send(:instances).should == ['50.40.30.20', '50.40.30.21']
+    end
   end
 end
